environment set up

--- a/ECG connectivity APP/index.html
+++ b/ECG connectivity APP/index.html
@@ -23,11 +23,9 @@
 <body ontouchstart=""><!-- ontouchstart="" enables low-delay CSS transitions. -->
 
 	<header>
-		<button class="back" onclick="history.back()">
-			<img src="ui/images/arrow-left.svg" />
+		<button class="Connect" onclick="app.connect()">
+			<p>Connect Bluetooth</p>
 		</button>
-
-		<img class="logotype" src="ui/images/logo.svg" alt="Evothings" />
 
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
