--- a/ECG connectivity APP/index.html
+++ b/ECG connectivity APP/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no,
 		shrink-to-fit=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 
-	<title>Basic Template App</title>
+	<title>Bluetooth app</title>
 
 	<style>
 		@import 'ui/css/evothings-app.css';
@@ -37,9 +37,10 @@
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
+	<script src="./app.js"></script>
 	<script src="libs/evothings/easyble/easyble.js"></script>
 	<script src="libs/evothings/arduinoble/arduinoble.js"></script>
-	<script src="./app.js"></script>
+
 
 	<!-- TODO: Add libraries that you need -->
 
