--- a/ECG connectivity APP/index.html
+++ b/ECG connectivity APP/index.html
@@ -22,25 +22,32 @@
 
 <body ontouchstart=""><!-- ontouchstart="" enables low-delay CSS transitions. -->
 
-	<header>
-		<button class="Connect" onclick="app.connect()">
-			<p>Connect Bluetooth</p>
-		</button>
+	<!-- START VIEW -->
+	<div id="startView">
+		
+		<h1 style="text-align:center">Arduino Bluetooth Testing App</h1>
+	
+		<button id="scan" class="green wide" onclick="app.connect()" >Scan Bluetooth</button>
 
-		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
-	</header>
+		<button id='stopScan' class='red wide' onclick='app.stopScan()'>Stop Scan</button>
+	</div>
 
-	<h1>TODO: Add app title</h1>
+	<!-- CONTROL PANEL -->
+	<div id='controlsView' class='wrapper' style='background-color: azure; display: none'>
+		<h1>Bluetooth Connected</h1>
+		<p id='deviceName'></p>
+		<div id="chartContainer" style="height: 370px; width:100%;"></div>
 
-	<p>This is a basic template for an Evothings app.</p>
+	</div>
 
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
 	<script src="./app.js"></script>
+	<script src="./bluetoothControl.js"></script>
 	<script src="libs/evothings/easyble/easyble.js"></script>
 	<script src="libs/evothings/arduinoble/arduinoble.js"></script>
-
+	<script src="./canvasjs.min.js"></script>
 
 	<!-- TODO: Add libraries that you need -->
 
