--- a/ECG connectivity APP/index.html
+++ b/ECG connectivity APP/index.html
@@ -9,10 +9,6 @@
 
 	<title>Bluetooth app</title>
 
-	<style>
-		@import 'ui/css/evothings-app.css';
-	</style>
-
 	<script>
 	// Redirect console.log to Evothings Workbench.
 	if (window.hyper && window.hyper.log) { console.log = hyper.log }
@@ -23,9 +19,9 @@
 <body ontouchstart=""><!-- ontouchstart="" enables low-delay CSS transitions. -->
 
 	<!-- START VIEW -->
-	<div id="startView">
+	<div id="startView" style="display: none">
 		
-		<h1 style="text-align:center">Arduino Bluetooth Testing App</h1>
+		<h1 style="text-align:center;">Arduino Bluetooth Testing App</h1>
 	
 		<button id="scan" class="green wide" onclick="app.connect()" >Scan Bluetooth</button>
 
@@ -33,21 +29,22 @@
 	</div>
 
 	<!-- CONTROL PANEL -->
-	<div id='controlsView' class='wrapper' style='background-color: azure; display: none'>
+	<div id='controlsView' class='wrapper' style='background-color: azure; display: block'>
 		<h1>Bluetooth Connected</h1>
 		<p id='deviceName'></p>
 		<div id="chartContainer" style="height: 370px; width:100%;"></div>
-
+		
 	</div>
 
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
-	<script src="./app.js"></script>
 	<script src="./bluetoothControl.js"></script>
+	<script src="./app.js"></script>
+	<script src="./canvasjs.min.js"></script>
 	<script src="libs/evothings/easyble/easyble.js"></script>
 	<script src="libs/evothings/arduinoble/arduinoble.js"></script>
-	<script src="./canvasjs.min.js"></script>
+	
 
 	<!-- TODO: Add libraries that you need -->
 
