--- a/ECG connectivity APP/index.html
+++ b/ECG connectivity APP/index.html
@@ -19,21 +19,21 @@
 <body ontouchstart=""><!-- ontouchstart="" enables low-delay CSS transitions. -->
 
 	<!-- START VIEW -->
-	<div id="startView" style="display: none">
-		
+	<div id="startView">
+
 		<h1 style="text-align:center;">Arduino Bluetooth Testing App</h1>
-	
+
 		<button id="scan" class="green wide" onclick="app.connect()" >Scan Bluetooth</button>
 
 		<button id='stopScan' class='red wide' onclick='app.stopScan()'>Stop Scan</button>
 	</div>
 
 	<!-- CONTROL PANEL -->
-	<div id='controlsView' class='wrapper' style='background-color: azure; display: block'>
+	<div id='controlsView' class='wrapper' style='background-color: azure; display: None'>
 		<h1>Bluetooth Connected</h1>
 		<p id='deviceName'></p>
 		<div id="chartContainer" style="height: 370px; width:100%;"></div>
-		
+
 	</div>
 
 	<script src="cordova.js"></script>
@@ -44,7 +44,7 @@
 	<script src="./canvasjs.min.js"></script>
 	<script src="libs/evothings/easyble/easyble.js"></script>
 	<script src="libs/evothings/arduinoble/arduinoble.js"></script>
-	
+
 
 	<!-- TODO: Add libraries that you need -->
 
