--- a/ECG connectivity APP/index.html
+++ b/ECG connectivity APP/index.html
@@ -39,8 +39,8 @@
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
-	<script src="./bluetoothControl.js"></script>
 	<script src="./app.js"></script>
+	<script src="./display.js"></script>
 	<script src="./canvasjs.min.js"></script>
 	<script src="libs/evothings/easyble/easyble.js"></script>
 	<script src="libs/evothings/arduinoble/arduinoble.js"></script>
