--- a/ECG connectivity APP/index.html
+++ b/ECG connectivity APP/index.html
@@ -36,13 +36,16 @@
 
 	</div>
 
+
+	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
 	<script src="./canvasjs.min.js"></script>
-	<script src="./display.js"></script>
-	<script src="./app.js"></script>
 	<script src="libs/evothings/easyble/easyble.js"></script>
 	<script src="libs/evothings/arduinoble/arduinoble.js"></script>
+	<script src="./display.js"></script>
+	<script src="./app.js"></script>
+
 
 
 	<!-- TODO: Add libraries that you need -->
